Fix db and test

--- a/backend/app-server/config/config.yaml
+++ b/backend/app-server/config/config.yaml
@@ -1,7 +1,9 @@
 PORT: 8080
 POSTGRES:
-  POSTGRES_USER: root
-  POSTGRES_PASSWORD: root_password
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: postgres
   POSTGRES_DB: BowCompetitions
   POSTGRES_HOST: localhost
   POSTGRES_PORT: 5432
+  POSTGRES_POOL_MAX_CONNS: 10
+  POSTGRES_POOL_MIN_CONNS: 1
