--- a/backend/app-server/config/config.yaml
+++ b/backend/app-server/config/config.yaml
@@ -1,7 +1,7 @@
 PORT: 8080
 POSTGRES:
-  POSTGRES_USER: postgres
-  POSTGRES_PASSWORD: postgres
+  POSTGRES_USER: root
+  POSTGRES_PASSWORD: root_password
   POSTGRES_DB: BowCompetitions
   POSTGRES_HOST: localhost
   POSTGRES_PORT: 5432
