--- a/backend/auth-server/docker-compose.yaml
+++ b/backend/auth-server/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:${AUTH_DB_TYPE}://db:5432/${AUTH_DB_NAME}
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/${AUTH_DB_NAME}
       - SPRING_DATASOURCE_USERNAME=${AUTH_DB_USERNAME}
       - SPRING_DATASOURCE_PASSWORD=${AUTH_DB_PASSWORD}
       - JWT_SECRET_KEY=${HS256_SECRET_KEY_BASE64}
