--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -13,8 +13,11 @@
     "@mantine/core": "^7.17.4",
     "@mantine/form": "^7.17.4",
     "@mantine/hooks": "^7.17.4",
+    "@tabler/core": "^1.1.1",
+    "@tabler/icons-react": "^3.31.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router": "^7.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
