--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -17,6 +17,7 @@
     "@mantine/hooks": "^7.17.4",
     "@tabler/core": "^1.1.1",
     "@tabler/icons-react": "^3.31.0",
+    "@tanstack/react-query": "^5.74.3",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
