--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -19,6 +19,7 @@
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-query": "^5.74.3",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
