--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -18,9 +18,11 @@
     "@tabler/core": "^1.1.1",
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-query": "^5.74.3",
+    "autosize": "^6.0.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
+    "imask": "^7.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.0"
