--- a/frontend/mobile_app/pubspec.yaml
+++ b/frontend/mobile_app/pubspec.yaml
@@ -28,6 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.19.0
   flutter:
     sdk: flutter
 
@@ -37,6 +40,7 @@ dependencies:
   google_fonts: ^6.2.1
   keyboard_dismisser: ^3.0.0
   provider: ^6.1.4
+
 
 
 dev_dependencies:
