--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -15,22 +15,27 @@
     "@mantine/dates": "^7.17.4",
     "@mantine/form": "^7.17.4",
     "@mantine/hooks": "^7.17.4",
+    "@mantine/notifications": "^7.17.5",
     "@tabler/core": "^1.1.1",
     "@tabler/icons-react": "^3.31.0",
-    "@tanstack/react-query": "^5.74.3",
+    "@tanstack/react-query": "^5.74.7",
     "autosize": "^6.0.1",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
     "imask": "^7.6.1",
+    "mantine-form-zod-resolver": "^1.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.5.0"
+    "react-router": "^7.5.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@tanstack/eslint-plugin-query": "^5.73.3",
+    "@types/node": "^22.15.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -44,6 +49,8 @@
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "vite": "^6.2.0"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.30.1",
+    "vite": "^6.3.3"
   }
 }
