--- a/frontend/mobile_app/pubspec.yaml
+++ b/frontend/mobile_app/pubspec.yaml
@@ -40,12 +40,18 @@ dependencies:
   google_fonts: ^6.2.1
   keyboard_dismisser: ^3.0.0
   provider: ^6.1.4
+  json_annotation: ^4.9.0
+  http: ^1.4.0
+
 
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: ^2.3.3
+  json_serializable: ^6.8.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
