--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
+    "eslint-config-mantine": "^4.0.3",
     "imask": "^7.6.1",
     "mantine-form-zod-resolver": "^1.1.0",
     "react": "^19.0.0",
