--- a/backend/app-server/config/config.yaml
+++ b/backend/app-server/config/config.yaml
@@ -6,3 +6,4 @@ POSTGRES:
   POSTGRES_HOST: localhost
   POSTGRES_PORT: 5432
   POSTGRES_POOL_SIZE: 20
+SECRET_KEY: my_secret_key_my_secret_key_my_secret_key
