--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -50,6 +50,7 @@
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
+    "rollup-plugin-polyfill-node": "^0.13.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.3"
