--- a/backend/auth-server/Dockerfile
+++ b/backend/auth-server/Dockerfile
@@ -1,9 +1,19 @@
+FROM eclipse-temurin:17-jdk-jammy AS builder
+
+WORKDIR /app
+
+COPY .mvn/ .mvn
+COPY mvnw pom.xml ./
+COPY src ./src
+
+RUN ./mvnw clean package
+
 FROM eclipse-temurin:17-jdk-jammy
 
 WORKDIR /app
 
-COPY target/auth-server-1.0.0.jar app.jar
+COPY --from=builder /app/target/auth-server-*.jar app.jar
 
-EXPOSE 8080
+EXPOSE 8081
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
