--- a/backend/auth-server/docker-compose.yaml
+++ b/backend/auth-server/docker-compose.yaml
@@ -1,28 +1,36 @@
-version: '3.8'
-
+name: auth-service-server
 services:
-  auth:
+  auth-service:
+    container_name: auth-service
     build: .
     ports:
-      - "8080:8080"
+      - "8081:8081"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/${AUTH_DB_NAME}
-      - SPRING_DATASOURCE_USERNAME=${AUTH_DB_USERNAME}
-      - SPRING_DATASOURCE_PASSWORD=${AUTH_DB_PASSWORD}
-      - JWT_SECRET_KEY=${HS256_SECRET_KEY_BASE64}
+      SPRING_DATASOURCE_URL: jdbc:postgresql://auth-service-db:5432/${AUTH_DB_NAME}
+      SPRING_DATASOURCE_USERNAME: ${AUTH_DB_USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${AUTH_DB_PASSWORD}
+      JWT_SECRET_KEY: ${SECRET_KEY_BASE64}
+      SUPERUSER_PASSWORD: ${AUTH_SUPERUSER_PASSWORD}
     depends_on:
-      - db
+      auth-service-db:
+          condition: service_healthy
 
-  db:
-    image: postgres:13
+  auth-service-db:
+    container_name: auth-service-db
+    image: postgres
     environment:
-      - POSTGRES_DB=${AUTH_DB_NAME}
-      - POSTGRES_USER=${AUTH_DB_USERNAME}
-      - POSTGRES_PASSWORD=${AUTH_DB_PASSWORD}
+      POSTGRES_DB: ${AUTH_DB_NAME}
+      POSTGRES_USER: ${AUTH_DB_USERNAME}
+      POSTGRES_PASSWORD: ${AUTH_DB_PASSWORD}
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - auth-service-db-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${AUTH_DB_USERNAME} -d ${AUTH_DB_NAME}" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 volumes:
-  postgres_data:
+  auth-service-db-data:
